# trayplay

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  lrelease.sh  lupdate.sh  ovh.kabus.TrayPlay.yml
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: active_window.rs  config.rs  gsr.rs  kdialog.rs  kwin.rs  logger.rs  main.rs  settings.rs  shortcuts.rs  tray.rs  ui.rs  utils.rs
src/ui/: messagebox.rs  mod.rs  settings.rs
ui/: AudioPage.qml  MainPage.qml  MessageBox.qml  settings.qml
ui/components/: ConfigLabel.qml
ui/lang/: de_DE.ts  es_ES.ts  fr_FR.ts  pl_PL.ts
