[package]
name = "trayplay"
version = "0.3.0"
edition = "2024"

[dependencies]
ashpd = { git = "https://github.com/kabuspl/ashpd.git" }
ctrlc = { version = "3.4.7", features = ["termination"] }
dirs = "6.0.0"
env_logger = "0.11.8"
freedesktop_entry_parser = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
ksni = "0.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.4"
zbus = "5.9.0"
