[package]
name = "trayplay"
version = "0.4.0"
edition = "2024"

[dependencies]
ashpd = { git = "https://github.com/kabuspl/ashpd.git" }
cstr = "0.2.12"
ctrlc = { version = "3.4.7", features = ["termination"] }
dirs = "6.0.0"
env_logger = "0.11.8"
freedesktop_entry_parser = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
int-enum = "1.2.0"
ksni = "0.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
paste = "1.0.15"
qmetaobject = "0.2.10"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.4"
zbus = "5.9.0"
