[package]
name = "trayplay"
version = "1.1.1"
edition = "2024"

[dependencies]
ashpd = "0.12.0"
cpp = "0.5.10"
cstr = "0.2.12"
ctrlc = { version = "3.5.1", features = ["termination"] }
dirs = "6.0.0"
env_logger = "0.11.8"
freedesktop_entry_parser = "2.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
int-enum = "1.2.0"
ksni = "0.3.2"
lazy_static = "1.5.0"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal"] }
paste = "1.0.15"
qmetaobject = "0.2.10"
qttypes = { version = "0.2.12", features = ["qtquick"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
zbus = "5.12.0"

[build-dependencies]
cpp_build = "0.5.10"
